# mirgecom

./: .gitignore  .pylintrc.yml  .readthedocs.yml  .rtd-env-py3.yml  .test-conda-env-py3.yml  LICENSE  MANIFEST.in  README.md  conda-env.yml  conda-lock.yml  conftest.py  get_box_mesh.py  get_box_mesh_v2.py  install-conda-dependencies.sh  install-conda.sh  install.sh  makezip.sh  porter.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  run-mypy.sh  run-pylint.sh  setup.cfg  setup.py  version.sh
.ci-support/: .gitattributes  install-mirge-from-source.sh  install.sh  merge-install-production-branch.sh  production-driver-install.sh  production-driver-setup.sh  production-drivers-install.sh  production-drivers-run.sh  production-install.sh  production-setup.sh  production-testing-env.sh  run-pytest.sh
.github/: pull_request_template.md
doc/: conf.py  development.rst  discretization.rst  faq.rst  fluid.rst  index.rst  misc.rst  model.rst  operators.rst  running.rst  support.rst  wall_model.rst
examples/: 2D_forward_step.py  README.md  _heat_cond.py  _heat_conduction_45deg-v2.msh  ablation-workshop-mpi-lazy.py  ablation-workshop-mpi.py  ablation-workshop.py  ablation_workshop-mpi-lazy.py  ablation_workshop-mpi.py  act2-heat.py  advdiff-tpe.py  advection.py  advection_diffusion_reaction.py  agitator.py  application-specific.py  autoignition-mpi-lazy.py  autoignition-mpi.py  autoignition-no-cantera-mpi.py  autoignition-tpe.py  autoignition.py  blasius.geo  blasius.py  boundary-bug.py  bozzle-mpi.py  bozzle.py  burgers-mpi.py  case1_Mixture.py  (+149 more)
(+285 files in other folders)
